--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
     </modules>
     <packaging>pom</packaging>
     <build>
-        <!--<plugins>
+        <plugins>
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
                 <version>2.7</version>
-                <extensions>true</extensions>
+                
                 <executions>
                     <execution>
                         <id>changed</id>
@@ -56,7 +56,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
-        </plugins>-->
+        </plugins>
     </build>
 
 
