--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.8-SNAPSHOT</version>
                 
                 <executions>
                     <execution>
@@ -26,9 +26,9 @@
                         <goals>
                             <goal>writeChanged</goal>
                         </goals>
+
                         <configuration>
                             <referenceBranch>C:\workspace-git\multimodule\.git</referenceBranch>
-                            
                             <ignoreChanged>com.rabo:multimodule</ignoreChanged>
                         </configuration>
                     </execution>
