--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
                 <version>2.8-SNAPSHOT</version>
-                
+                <extensions>true</extensions>
                 <executions>
                     <execution>
                         <id>changed</id>
