--- a/module1/pom.xml
+++ b/module1/pom.xml
@@ -5,13 +5,12 @@
     <parent>
         <artifactId>multimodule</artifactId>
         <groupId>com.rabo</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rabo.module1</groupId>
     <artifactId>module1</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
 
 </project>
