--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -5,18 +5,16 @@
     <parent>
         <artifactId>multimodule</artifactId>
         <groupId>com.rabo</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rabo.module2</groupId>
     <artifactId>module2</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>com.rabo.module1</groupId>
             <artifactId>module1</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
