--- a/module3/pom.xml
+++ b/module3/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>multimodule</artifactId>
         <groupId>com.rabo</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>module3</groupId>
     <artifactId>module3</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${revision}</version>
 
 
 </project>
