--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,10 @@
         <module>module3</module>
     </modules>
     <packaging>pom</packaging>
-    <dependencyManagement>
+    <properties>
+        <myname.version>1.1.1</myname.version>
+    </properties>
+    <!--<dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.rabo.module1</groupId>
@@ -26,9 +29,28 @@
                 <version>${revision}</version>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <properties>
+                        <property>
+                            <name>myname.version</name>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>com.rabo.module1</groupId>
+                                    <artifactId>module1</artifactId>
+                                    <version>latest</version>
+                                </dependency>
+                            </dependencies>
+                        </property>
+                    </properties>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
