--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -9,12 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.rabo.module2</groupId>
+    <groupId>com.rabo</groupId>
     <artifactId>module2</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.rabo.module1</groupId>
+            <groupId>com.rabo</groupId>
             <artifactId>module1</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
