--- a/module3/pom.xml
+++ b/module3/pom.xml
@@ -9,9 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>module3</groupId>
+    <groupId>com.rabo</groupId>
     <artifactId>module3</artifactId>
-    <version>${revision}</version>
 
 
 </project>
