--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
+                <version>1.2</version>
+                <configuration>
+                    <includesList>com.rabo</includesList>
+                    <generateBackupPoms>false</generateBackupPoms>
+                    <allowSnapshots>true</allowSnapshots>
+                </configuration>
+            </plugin>
+           <!-- <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
                 <version>2.7</version>
                 <configuration>
                     <properties>
@@ -50,7 +60,7 @@
                         </property>
                     </properties>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
