--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <properties>
         <myname.version>1.1.1</myname.version>
     </properties>
-    <!--<dependencyManagement>
+    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.rabo.module1</groupId>
@@ -29,7 +29,7 @@
                 <version>${revision}</version>
             </dependency>
         </dependencies>
-    </dependencyManagement>-->
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
