--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.rabo.module1</groupId>
+                <groupId>com.rabo</groupId>
                 <artifactId>module1</artifactId>
                 <version>${revision}</version>
             </dependency>
