--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.rabo</groupId>
     <artifactId>multimodule</artifactId>
-    <version>${revision}</version>
+    <version>R04.00.00</version>
     <modules>
         <module>module1</module>
         <module>module2</module>
@@ -20,6 +20,13 @@
     <packaging>pom</packaging>
     <properties>
         <myname.version>1.1.1</myname.version>
+        <partial.referenceBranch>HEAD~1</partial.referenceBranch>
+        <partial.baseBranch>HEAD</partial.baseBranch>
+        <partial.uncommited>true</partial.uncommited>
+        <partial.untracked>false</partial.untracked>
+        <partial.buildAll>false</partial.buildAll>
+        <partial.outputFile>changed.projects</partial.outputFile>
+        <partial.writeChanged>false</partial.writeChanged>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -42,25 +49,25 @@
                     <allowSnapshots>true</allowSnapshots>
                 </configuration>
             </plugin>
-           <!-- <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <properties>
-                        <property>
-                            <name>myname.version</name>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>com.rabo.module1</groupId>
-                                    <artifactId>module1</artifactId>
-                                    <version>latest</version>
-                                </dependency>
-                            </dependencies>
-                        </property>
-                    </properties>
-                </configuration>
-            </plugin>-->
+            <!-- <plugin>
+                 <groupId>org.codehaus.mojo</groupId>
+                 <artifactId>versions-maven-plugin</artifactId>
+                 <version>2.7</version>
+                 <configuration>
+                     <properties>
+                         <property>
+                             <name>myname.version</name>
+                             <dependencies>
+                                 <dependency>
+                                     <groupId>com.rabo.module1</groupId>
+                                     <artifactId>module1</artifactId>
+                                     <version>latest</version>
+                                 </dependency>
+                             </dependencies>
+                         </property>
+                     </properties>
+                 </configuration>
+             </plugin>-->
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
