--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <dependency>
                 <groupId>com.rabo</groupId>
                 <artifactId>module1</artifactId>
-                <version>${revision}</version>
+                <version>R04.00.00</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -47,6 +47,14 @@
                     <includesList>com.rabo</includesList>
                     <generateBackupPoms>false</generateBackupPoms>
                     <allowSnapshots>true</allowSnapshots>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>R@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
             <!-- <plugin>
