--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>multimodule</artifactId>
         <groupId>com.rabo</groupId>
-        <version>R04.00.00</version>
+        <version>R04.00.00-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.rabo</groupId>
             <artifactId>module1</artifactId>
-            <version>R04.00.00</version>
+            <version>R04.00.00-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
