--- a/module1/pom.xml
+++ b/module1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>multimodule</artifactId>
         <groupId>com.rabo</groupId>
-        <version>R04.00.00-SNAPSHOT</version>
+        <version>04.00.00-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
