--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.rabo</groupId>
             <artifactId>module1</artifactId>
-            <version>R04.00.00-SNAPSHOT</version>
+            <version>04.00.00-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
