--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
-                <version>2.8-SNAPSHOT</version>
+                <version>2.8</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
