--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>com.lesfurets</groupId>
                 <artifactId>partial-build-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.7</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -100,7 +100,7 @@
                         </configuration>
                     </execution>
                 </executions>
-                <!-- <dependencies>
+                 <dependencies>
                      <dependency>
                          <groupId>com.google.inject</groupId>
                          <artifactId>guice</artifactId>
@@ -121,7 +121,7 @@
                          <artifactId>commons-lang3</artifactId>
                          <version>3.0</version>
                      </dependency>
-                 </dependencies>-->
+                 </dependencies>
             </plugin>
         </plugins>
     </build>
