--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
         <version>18</version>
-        <relativePath></relativePath>
+        <relativePath />
     </parent>
     <groupId>com.rabo</groupId>
     <artifactId>multimodule</artifactId>
-    <version>04.00.00-SNAPSHOT</version>
+    <version>04.00.00</version>
     <modules>
         <module>module1</module>
         <module>module2</module>
@@ -30,13 +28,14 @@
     </properties>
     <scm>
         <developerConnection>scm:git:file:///C:/workspace-git/multimodule</developerConnection>
-    </scm>
+      <tag>R04.00.00</tag>
+  </scm>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.rabo</groupId>
                 <artifactId>module1</artifactId>
-                <version>04.00.00-SNAPSHOT</version>
+                <version>04.00.00</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
