--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>multimodule</artifactId>
         <groupId>com.rabo</groupId>
-        <version>04.00.00</version>
+        <version>04.00.00-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +15,7 @@
         <dependency>
             <groupId>com.rabo</groupId>
             <artifactId>module1</artifactId>
-            <version>04.00.00</version>
+            <version>04.00.00-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
